# FUZIX

./: .gitignore  README.md
Kernel/: bank16k.c  bank16kfc.c  bank32k.c  bank8k.c  lowlevel-armm0.S  process.c  syscall_exec16.c  syscall_exec32.c  syscall_execelf32.c
Kernel/include/: kernel.h
Kernel/platform-rp2040_softirq/: CMakeLists.txt  README.md  config.h  devices.c  devsdspi.c  fuzix_blockdev.c  fuzix_devaudio.c  fuzix_devgpio.c  fuzix_devi2c.c  fuzix_devinput.c  fuzix_devmem.c  fuzix_devrtc.c  fuzix_devtty.c  fuzix_mm.c  fuzix_mm.h  fuzix_mm.template.c  fuzix_platform.c  fuzix_platform.h  fuzix_softirq.c  fuzix_swapper.c  fuzix_swapper.h  fuzix_time.c  fuzix_tty.c  main.c  platform.h  platform_i2c.h  pyco.py  rt.h  rt_blockdev.h  rt_blockdev_flash.c  rt_blockdev_flash.h  rt_blockdev_sd.c  rt_blockdev_usb.c  rt_blockdev_usb.h  rt_chardev.c  rt_chardev.h  rt_core1.c  rt_core1.h  rt_fuzix.h  rt_power.c  (+15 more)
Kernel/platform-rpipico/: CMakeLists.txt  Makefile  config.h  core1.c  devcore1.c  devflash.c  devflash_raw.c  devices.c  devpower.c  devpower.h  devsdspi.c  devtty.c  devusb.c  devusb.h  devusb_common.h  devvirt.c  devvirt.h  devvirt_core1.c  devvirt_tty.c  devvirt_uart.c  devvirt_usb.c  fuzix_blockdev.c  fuzix_helpers.h  fuzix_misc.c  fuzix_rt.h  fuzix_softirq.c  fuzix_swapper.c  fuzix_ticker.c  fuzix_tty.c  gcc.h  log.c  log.h  main.c  mangle.h  picosdk.h  platform.c  platform.h  platform_blockdev.c  platform_chardev.c  platform_log.c  (+39 more)
Kernel/platform-rpipico/tools/: uf2conv.c
Kernel/platform-rpipico_rt/: CMakeLists.txt  Makefile  README.md  config.all.h  config.h  devices.c  fuzix_blockdev.c  fuzix_chardev.c  fuzix_misc.c  fuzix_platform.c  fuzix_rt.h  fuzix_rtc.c  fuzix_setdate.c  fuzix_softirq.c  fuzix_ticker.c  fuzix_time.c  fuzix_tty.c  main.c  platform.h  rt_blockdev.c  rt_blockdev_flash.c  rt_blockdev_sd.c  rt_blockdev_usb.c  rt_blockdev_usb.h  rt_chardev.c  rt_chardev.h  rt_core1.c  rt_fuzix.h  rt_log.h  rt_softirq.c  rt_softirq.h  rt_stdio.c  rt_stdio.h  rt_time.c  rt_time.h  rt_uart.c  rt_uart.h  rt_usb.c  rt_usb.h  rt_usb_mplex.c  (+4 more)
Standalone/: sethint
Standalone/filesystem-src/etc-files/: inittab  issue  passwd
